# 3.0.0.0

./: .gitignore  CMakeLists.txt  README.md
cmake/: TrdpConfigLoader.cmake
scripts/: verify_cmake_configs.py
